tests/scripts/errors/runtime/deep_call_stack.cdo
FUNCTION a() { b(); }
FUNCTION b() { c(); }
FUNCTION c() { THROW "error","kind","detail"; }
a();
